--- a/internal/main.html
+++ b/internal/main.html
@@ -20,14 +20,21 @@
                 <p>
                     <label for="banners">Banners:</label>
                     <select name="banners" id="banners">
-                        <option value="shadow">shadow</option>
-                        <option value="standard">standard</option>
-                        <option value="thinkertoy">thinkertoy</option>
+                        <option value="shadow">Shadow</option>
+                        <option value="standard">Standard</option>
+                        <option value="thinkertoy">Thinkertoy</option>
                     </select>
                 </p>
                 <p>
                     <textarea name="text" id="text" cols="30" rows="10" placeholder="Type something here"></textarea>
                 </p>
+                <p>
+                    <button type="submit">Test</button>
+                </p>
+                <fieldset>
+                    <legend>Output</legend>
+
+                </fieldset>
             </fieldset>
         </main>
     </form>
