--- a/internal/badrequest.html
+++ b/internal/badrequest.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
+    <meta charset="UTF-8">
     <title>Bad Request - 400</title>
+    <link rel="stylesheet" href="main.css">
 </head>
 
 <body>
     <h1>Error 400: Bad Request</h1>
-    <p>The request is invalid.</p>
+    <h3>The request is invalid.</h3>
 </body>
 
 </html>
