--- a/internal/internal.html
+++ b/internal/internal.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
+    <meta charset="UTF-8">
     <title>Internal Server Error - 500</title>
+    <link rel="stylesheet" href="main.css">
 </head>
 
 <body>
-    <h1>Internal Server Error - 500</h1>
-    <p>Sorry, something went wrong.</p>
+    <h1>Error 500: Internal Server Error:</h1>
+    <h3>Sorry, something went wrong.</h3>
 </body>
 
 </html>
