--- a/internal/notfound.html
+++ b/internal/notfound.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
+    <meta charset="UTF-8">
     <title>Not Found - 404</title>
+    <link rel="stylesheet" href="main.css">
 </head>
 
 <body>
-    <h1>Not Found - 404</h1>
-    <p>The requested page was not found.</p>
+    <h1>Error 404: Not Found</h1>
+    <h3>The requested URL was not found on this server</h3>
 </body>
 
 </html>
